2004-08-09  John W. Eaton  <jwe@octave.org>

	* idx-vector.h (idx_vector::idx_vector_rep::tree_to_mat_idx
	(const octave_int<U>&)): New member function. 
	(idx_vector::idx_vector_rep::tree_to_mat_idx (double, bool&),
	idx_vector::idx_vector_rep::tree_to_mat_idx (int)):
	Now member functions instead of static in idx-vector.cc.
	(idx_vector::idx_vector_rep::idx_vector_rep (const octave_int<U>&),
	idx_vector::idx_vector_rep::idx_vector_rep (const intNDArray<U>&)):
	New template constructors.

2004-08-05  John W. Eaton  <jwe@octave.org>

	* EIG.cc (EIG::init): Add volatile qualifier to nvr decl.

	* intNDArray.cc (intNDArray<T>::operator !, intNDArray<T>::all,
	intNDArray<T>::any): Sprinkle with this-> as needed.
	* mx-inlines.cc (MX_ND_REDUCTION, MX_ND_CUMULATIVE_OP): Likewise.

2004-08-03  John W. Eaton  <jwe@octave.org>

	* Array.cc (Array<T>::squeeze): Do nothing for 2-d arrays.  For
	arrays with more than two dimensions and only one non-singleton
	dimension, return a column vector.

2004-07-28  John W. Eaton  <jwe@octave.org>

	* oct-cmplx.h (pow (const Complex&, const double&):
	Convert second arg to complex to avoid libstdc++ bug.

2004-07-27  John W. Eaton  <jwe@octave.org>

	* oct-inttypes.h (bitshift): New arg, MASK.
	(OCTAVE_INT_BITSHIFT_OP): Bitshift does not saturate.

2004-07-23  John W. Eaton  <jwe@octave.org>

	* Array.cc (Array<T>::reshape): Return *this if no change in size.

2004-07-23  David Bateman  <dbateman@free.fr>

	* Array.cc, Array.h (cat_ra): Delete.
	* Array.h, Array-C.cc, Array-d.cc, Array-ch.cc, Array-i.cc 
	(INSTANTIATE_ARRAY_CAT): Delete.

	* dNDArray.cc, dNDArray.h, CNDArray.cc, CNDArray.h, chNDArray.cc, 
	chNDArray.h, intNDArray.cc, intNDArray.h (cat): Delete.
	
	* Array.cc (Array<T>::insert): Copy data in NDArray version.

	* dNDArray.cc, dNDArray.h, CNDArray.cc, CNDArray.h, chNDArray.cc, 
	chNDArray.h (concat): New function used for concatenation that does
	an indexed copy of one array into another.
