@@ -1,3 +1,15 @@
+2004-08-24  David Bateman  <dbateman@free.fr>
+
+	* chNDArray.cc (concat): Check whether matrix to be inserted is
+	empty instead of checking final matrix.
+	* dNDArray.cc (concat): Likewise.
+	* CNDArray.cc (concat): Likewise.
+
+2004-08-23  David Bateman  <dbateman@free.fr>
+
+        * dim-vector.h (dim_vector::concat): Correct incrementation for
+	non-existent dimensions.
+
 2004-08-09  John W. Eaton  <jwe@octave.org>
 
 	* idx-vector.h (idx_vector::idx_vector_rep::tree_to_mat_idx
